tests/single_instruction_translation_validation/mcsema/register-variants/bsrq_r64_r64/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:171:22: error: use of undefined value '@my.ctlz.i64'
  %5 = tail call i64 @my.ctlz.i64(i64 %3, i1 true) #22
                     ^
0.01user 0.01system 0:00.03elapsed 106%CPU (0avgtext+0avgdata 27464maxresident)k
0inputs+16outputs (0major+3263minor)pagefaults 0swaps
